fixed double border & added Page adding/editing User

--- a/src/main/resources/static/style/home/search.css
+++ b/src/main/resources/static/style/home/search.css
@@ -20,6 +20,7 @@
     transition: 0.25s;
     cursor: pointer;
     margin: 5px;
+    outline: none;
 }
 .search input[type = "text"]:focus, input[type = "number"]:focus{
     border-color: #2ecc71;
