--- a/src/main/resources/static/style/userEditing/buttonSearch.css
+++ b/src/main/resources/static/style/userEditing/buttonSearch.css
@@ -14,6 +14,7 @@ input[type = "number"]{
     transition: 0.25s;
     cursor: pointer;
     text-align: center;
+    outline: none;
 }
 input[type = "number"]:focus{
     border-color: #2ecc71;
